fix HealthRecord lastday of streak being null
